# orbit-rs

./: .codecov.yml  .cursorrules  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES_IMPLEMENTATION.md  AGENTS.md  AQL_REFERENCE.html  BACKLOG_CONSOLIDATED.html  BOOSTING_ALGORITHMS_OVERVIEW.html  BOOSTING_ALGORITHMS_OVERVIEW.md  CHANGELOG.html  CHANGELOG.md  CICD.html  CICD.md  CLAUDE.md  CLUSTER_MANAGEMENT.html  CODE_OF_CONDUCT.html  COGNITIVE_COMPLEXITY_ANALYSIS.md  COGNITIVE_COMPLEXITY_REPORT.md  COMPREHENSIVE_DATABASE_COMPARISON.html  COMPREHENSIVE_PROJECT_AUDIT.md  COMPUTE_ACCELERATION_GUIDE.md  CONFIGURABLE_ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY_MAPPING.md  DEVELOPMENT.html  DEVELOPMENT.md  DOCKER_REMOVAL_SUMMARY.html  DOCKER_REMOVAL_SUMMARY.md  DOCUMENTATION_UPDATES.md  DOCUMENTATION_UPDATES_SUMMARY.md  DOCUMENTATION_UPDATE_INTEGRATED_SERVER.md  Dockerfile  FIX_SUMMARY.md  GEOSPATIAL_ENHANCEMENT_PROPOSAL.html  GEOSPATIAL_ENHANCEMENT_PROPOSAL.md  (+115 more)
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: actor_benchmarks.rs
benchmarks/examples/: rocksdb_demo.rs
examples/actor-memory-integration/: Cargo.toml
examples/benchmarks-demo/: Cargo.toml
examples/distributed-counter-example/: Cargo.toml
examples/distributed-transactions/: Cargo.toml  README.md
examples/hello-world/: Cargo.toml
examples/mcp-advanced-server/: Cargo.toml  README.md
examples/mcp-basic-client/: Cargo.toml  README.md
examples/ml-sql-functions/: Cargo.toml
examples/multi-model-query-example/: Cargo.toml  README.md  sample_queries.oql
examples/orbitql-example/: Cargo.toml
examples/pgvector-store/: Cargo.toml  README.md
examples/resp-server/: Cargo.toml  README.md  TEST_REPORT.md  run_tests.sh
examples/saga-example/: Cargo.toml
examples/sql-feature-demo/: Cargo.toml
orbit-application/: Cargo.toml
orbit-application/src/: error.rs  event.rs  health.rs  lib.rs  lifecycle.rs  plugin.rs  service.rs  telemetry.rs
orbit-benchmarks/: Cargo.toml  README.md
orbit-benchmarks/benches/: actor_benchmarks.rs  leader_election_benchmarks.rs  persistence_comparison.rs
orbit-benchmarks/docs/: DISASTER_RECOVERY.md  OPERATIONS_RUNBOOK.md
orbit-benchmarks/examples/: configurable_backends_demo.rs  cow_btree_demo.rs  cow_btree_persistence_demo.rs  rocksdb_demo.rs  wal_replay_demo.rs
orbit-benchmarks/scripts/: README.md  analyze_results.py  run_benchmarks.sh
orbit-benchmarks/src/: lib.rs
orbit-client-spring/: Cargo.toml
orbit-client-spring/examples/: java_spring_boot_integration.md
orbit-client-spring/src/: annotations.rs  config.rs  container.rs  context.rs  error.rs  grpc_server.rs  http_server.rs  integration.rs  java_integration.rs  jni_bindings.rs  lib.rs
orbit-compute/: Cargo.toml
orbit-compute/src/: aarch64.rs  capabilities.rs  errors.rs  gpu.rs  lib.rs  memory.rs  neural.rs  scheduler.rs  windows.rs
orbit-ml/: Cargo.toml
orbit-ml/src/: config.rs  data.rs  error.rs  inference.rs  lib.rs  metrics.rs  models.rs  training.rs  utils.rs
orbit-operator/: Cargo.toml  README.md
orbit-operator/deploy/: crds.yaml  operator.yaml  rbac.yaml
orbit-operator/src/: actor_controller.rs  actor_crd.rs  cluster_controller.rs  crd.rs  main.rs  transaction_controller.rs  transaction_crd.rs
orbit-python-client/: .gitignore  README.md  pyproject.toml
orbit-python-client/examples/: cypher_example.py  multi_protocol_example.py  postgres_example.py  redis_example.py  timeseries_example.py
orbit-python-client/orbit_client/: __init__.py  client.py  protocols.py
orbit-server/: Cargo.toml
orbit-server-etcd/: Cargo.toml
orbit-server-etcd/src/: client.rs  config.rs  coordination.rs  discovery.rs  election.rs  error.rs  health.rs  lib.rs
orbit-server-prometheus/: Cargo.toml
orbit-server-prometheus/src/: alerts.rs  collector.rs  config.rs  dashboard.rs  exporter.rs  health.rs  lib.rs  metrics.rs  profiling.rs  server.rs  tracing_support.rs
orbit-server/examples/: hello-world.rs  integrated-server.rs  persistence_demo.rs
orbit-server/src/: directory.rs  lib.rs  load_balancer.rs  main.rs  main_multiprotocol.rs  mesh.rs  server.rs  test_pooling_integration.rs
orbit-shared/: Cargo.toml  build.rs  debug_macro
orbit-shared/src/: actor_communication.rs  addressable.rs  backup.rs  backup_scheduler.rs  benchmarks.rs  builder_pattern.rs  cdc.rs  cluster_manager.rs  consensus.rs  data_sync.rs  election_metrics.rs  election_state.rs  error.rs  error_handling.rs  error_utils.rs  event_sourcing.rs  exception.rs  execution_utils.rs  failover.rs  graph.rs  graphrag.rs  integrated_recovery.rs  k8s_election.rs  lib.rs  mesh.rs  multi_master.rs  net.rs  persistence.rs  pitr.rs  raft_transport.rs  recovery.rs  replication.rs  rolling_upgrade.rs  router.rs  saga.rs  saga_recovery.rs  security_patterns.rs  serialization.rs  stream_processing.rs  streaming_integrations.rs  (+5 more)
orbit-util/: Cargo.toml
orbit-util/src/: lib.rs  metrics_ext.rs  misc.rs  mocks.rs  test_config.rs  test_utils.rs  time.rs
persistence-benchmark/: Cargo.toml
persistence-benchmark/benches/: persistence_comparison.rs
persistence-benchmark/docs/: DISASTER_RECOVERY.md  PERSISTENCE_ARCHITECTURE.md
persistence-benchmark/examples/: configurable_backends_demo.rs  cow_btree_demo.rs  cow_btree_persistence_demo.rs  rocksdb_demo.rs  wal_replay_demo.rs
persistence-benchmark/src/: cow_btree.rs  lib.rs  lsm_tree.rs  metrics.rs  persistence_factory.rs  rocksdb_impl.rs  workload.rs
tests/: Cargo.toml  README.md  requirements.txt  run_integration_tests.py  test_comprehensive_sql_keywords.sh  test_postgres_queries.sh  test_sql_keyword_examples.sh
tests/bdd/: mod.rs
tests/features/: actor_lifecycle.feature  messaging.feature  neo4j_cypher.feature
tests/graphml/: mod.rs  node_embeddings_tests.rs
tests/integration/: leader_election_recovery_tests.rs  leader_election_tests.rs  test_graph_commands.py  test_timeseries_commands.py  test_vector_commands.py
tests/mocks/: mock_simple.rs
tests/neo4j/: cypher_parser_tests.rs  graph_actors_tests.rs  mod.rs
(+6206 files in other folders)
