[workspace]
resolver = "2"

members = [
    "orbit-util",
    "orbit-shared", 
    "orbit-proto",
    "orbit-client",
    "orbit-server",
    "orbit-server-etcd", 
    "orbit-server-prometheus",
    "orbit-protocols",
    "orbit-application",
    "orbit-operator",
    "orbit-compute",
    "tests",
    "examples/hello-world",
    "examples/distributed-counter",
    "examples/distributed-transactions",
    "examples/resp-server",
    "examples/vector-store",
    "examples/pgvector-store",
    "examples/saga-example",
    "examples/timeseries-demo",
    "examples/orbitql-example",
    "examples/multi-model-query-example",
]

# Exclude benchmarks from default workspace build due to WAL replay issues
exclude = [
    "orbit-benchmarks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ravindra Boddipalli <ravindra@turingworks.com>"]
license = "BSD-3-Clause OR MIT"
description = "Orbit - Build distributed and scalable online services (Rust implementation)"
repository = "https://github.com/TuringWorks/orbit-rs"

[workspace.dependencies]
# Kubernetes operator dependencies  
kube = "0.95"
k8s-openapi = "0.22"
controller-rs = "0.1"
jsonschema = "0.33"
serde_yaml = "0.9"
clap = "4.0"
hyper = "0.14"

# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC and Protocol Buffers
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Collections and utilities
dashmap = "6.0"
futures = "0.3"
once_cell = "1.0"

# Async traits
async-trait = "0.1"

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Testing
mockall = "0.13"
cucumber = "0.21"
proptest = "1.4"
tokio-test = "0.4"
rand = "0.8"
