[workspace]
resolver = "2"

members = [
    "orbit/util",
    "orbit/shared",
    "orbit/proto",
    "orbit/client",
    "orbit/client-spring",
    "orbit/server",
    "orbit/server-etcd",
    "orbit/server-prometheus",
    "orbit/protocols",
    "orbit/application",
    "orbit/operator",
    "orbit/compute",
    "orbit/ml",
    "tests",
    "examples/hello-world",
    "examples/distributed-counter-example",
    "examples/distributed-transactions",
    "examples/resp-server",
    "examples/vector-store",
    "examples/pgvector-store",
    "examples/saga-example",
    "examples/timeseries-demo",
    "examples/orbitql-example",
    "examples/multi-model-query-example",
    "examples/benchmarks-demo",
]

# Exclude benchmarks from default workspace build due to WAL replay issues
# orbit-benchmarks contains comprehensive performance tests including:
#   - OrbitQL query language benchmarks (TPC-H, TPC-C, TPC-DS)
#   - Actor system performance benchmarks
#   - Storage backend comparison benchmarks (with known WAL issues)
#   - Heterogeneous compute acceleration benchmarks
exclude = [
    "orbit/benchmarks",
    "orbit/desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ravindra Boddipalli <ravindra@turingworks.com>"]
license = "BSD-3-Clause OR MIT"
description = "Orbit - Build distributed and scalable online services (Rust implementation)"
repository = "https://github.com/TuringWorks/orbit-rs"

[workspace.metadata.clippy]
cognitive-complexity-threshold = 15

[workspace.dependencies]
pyo3 = "0.24.1"
# Kubernetes operator dependencies  
kube = "0.95"
k8s-openapi = "0.22"
controller-rs = "0.1"
serde_yaml = "0.9"
clap = "4.0"
hyper = "0.14"

# Core async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC and Protocol Buffers
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Collections and utilities
dashmap = "6.0"
futures = "0.3"
once_cell = "1.0"

# Async traits
async-trait = "0.1"

# Metrics
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Code quality and patterns
regex = "1.10"
paste = "1.0"
exponential-backoff = "2.0"  # Replaces unmaintained backoff

# Testing
mockall = "0.13"
cucumber = "0.21"
proptest = "1.4"
tokio-test = "0.4"
rand = "0.9"
