[package]
name = "orbit-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["Ravindra Boddipalli <ravindra@turingworks.com>"]
license = "BSD-3-Clause OR MIT"
description = "Orbit performance benchmarks"

[dependencies]
# Orbit crates
orbit-util = { path = "../orbit/util" }
orbit-shared = { path = "../orbit/shared" }
orbit-client = { path = "../orbit/client" }
orbit-server = { path = "../orbit/server" }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "6.0"
rand = "0.8"
async-trait = "0.1"

# RocksDB
rocksdb = "0.22"

# Memory mapping
memmap2 = "0.9"

# Async utilities
futures = "0.3"
tokio-util = "0.7"

# Error handling
thiserror = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Testing utilities
tempfile = "3.0"
fastrand = "2.0"

# Statistics
statistical = "1.0"
num_cpus = "1.0"

[[bench]]
name = "actor_benchmarks"
harness = false

[[bench]]
name = "leader_election_benchmarks"
harness = false

[[bench]]
name = "persistence_comparison"
harness = false

[[bench]]
name = "phase9_performance"
harness = false

# Examples excluded from build
# [[example]]
# name = "cow_btree_demo"
# path = "examples/cow_btree_demo.rs"
#
# [[example]]
# name = "cow_btree_persistence_demo"
# path = "examples/cow_btree_persistence_demo.rs"
#
# [[example]]
# name = "rocksdb_demo"
# path = "examples/rocksdb_demo.rs"
#
# [[example]]
# name = "configurable_backends_demo"
# path = "examples/configurable_backends_demo.rs"
