[package]
name = "orbit-application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Orbit application-level utilities and configuration"

[dependencies]
orbit-util = { path = "../orbit-util" }
orbit-shared = { path = "../orbit-shared" }
orbit-client = { path = "../orbit-client" }
orbit-server = { path = "../orbit-server" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true