[package]
name = "orbit-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Orbit performance benchmarks"

[dependencies]
# Orbit crates
orbit-util = { path = "../orbit-util" }
orbit-shared = { path = "../orbit-shared" }
orbit-client = { path = "../orbit-client" }
orbit-server = { path = "../orbit-server" }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Core dependencies
tokio.workspace = true
serde.workspace = true
anyhow.workspace = true
serde_json.workspace = true
uuid.workspace = true
dashmap.workspace = true
rand.workspace = true
async-trait.workspace = true

# RocksDB
rocksdb = "0.22"

# Memory mapping
memmap2 = "0.9"

# Async utilities
futures.workspace = true
tokio-util = "0.7"

# Error handling
thiserror.workspace = true

# Logging and metrics
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time utilities
chrono.workspace = true

# Testing utilities
tempfile = "3.0"
fastrand = "2.0"

# Statistics
statistical = "1.0"

[[bench]]
name = "actor_benchmarks"
harness = false

[[bench]]
name = "leader_election_benchmarks"
harness = false

[[bench]]
name = "persistence_comparison"
harness = false

[[example]]
name = "cow_btree_demo"
path = "examples/cow_btree_demo.rs"

[[example]]
name = "cow_btree_persistence_demo"
path = "examples/cow_btree_persistence_demo.rs"

[[example]]
name = "rocksdb_demo"
path = "examples/rocksdb_demo.rs"

[[example]]
name = "configurable_backends_demo"
path = "examples/configurable_backends_demo.rs"
