[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit-python-client"
version = "0.1.0"
description = "Python client library for Orbit-RS multi-model database supporting all protocols"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Orbit-RS Contributors"}
]
keywords = ["database", "multi-model", "postgresql", "mysql", "redis", "cassandra", "neo4j", "arangodb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]

dependencies = [
    "psycopg2-binary>=2.9.0",
    "PyMySQL>=1.0.0",
    "cassandra-driver>=3.28.0",
    "redis>=4.5.0",
    "neo4j>=5.0.0",
    "python-arango>=7.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
async = [
    "asyncpg>=0.28.0",
    "aiomysql>=0.2.0",
    "aioredis>=2.0.0",
    "httpx[http2]>=0.24.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/turingworks/orbit-rs"
Documentation = "https://turingworks.github.io/orbit-rs"
Repository = "https://github.com/turingworks/orbit-rs"

[tool.setuptools.packages.find]
where = ["."]
include = ["orbit_client*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py38"

