[package]
name = "orbit-server-prometheus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Orbit Prometheus metrics integration"

[dependencies]
orbit-util = { path = "../orbit-util" }
orbit-shared = { path = "../orbit-shared" }
orbit-server = { path = "../orbit-server" }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
hyper = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
dashmap = "5.5"
toml = "0.8"
serde_yaml = "0.9"
serde_json = "1.0"
tokio-util = "0.7"
