[package]
name = "orbit-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Orbit server-side cluster management and actor hosting"

[[bin]]
name = "orbit-server"
path = "src/main.rs"

[dependencies]
orbit-util = { path = "../orbit-util" }
orbit-shared = { path = "../orbit-shared" }
orbit-proto = { path = "../orbit-proto" }
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
futures.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
clap = { version = "4.0", features = ["derive", "env"] }
petgraph = "0.6" # For graph algorithms (cluster management)

[dev-dependencies]
mockall.workspace = true
tokio-test = "0.4"
