[package]
name = "orbit-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Orbit server-side cluster management and actor hosting"

[[bin]]
name = "orbit-server"
path = "src/main.rs"

[dependencies]
orbit-util = { path = "../orbit-util" }
orbit-shared = { path = "../orbit-shared" }
orbit-proto = { path = "../orbit-proto" }
orbit-protocols = { path = "../orbit-protocols" }
orbit-client = { path = "../orbit-client" }
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tonic-reflection = "0.12"
futures.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
clap = { version = "4.0", features = ["derive", "env"] }
petgraph = "0.6" # For graph algorithms (cluster management)
# Persistence provider dependencies
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
flate2 = "1.0" # For compression
toml = "0.9" # For configuration file support
# New persistence backends
rocksdb = "0.22"
rand = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
env_logger = "0.11"
fastbloom-rs = "0.5" # For bloom filters in LSM-Tree
base64 = "0.22" # For WAL encoding

[dev-dependencies]
mockall.workspace = true
tokio-test = "0.4"
