[package]
name = "orbit-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Orbit shared data structures and interfaces"


[dependencies]
orbit-util = { path = "../orbit-util" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
sha2 = "0.10"
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
uuid.workspace = true
# Using SQLx fork with RSA vulnerability fix (RUSTSEC-2023-0071)
# Repository: https://github.com/ravituringworks/sqlx-no-rsa
sqlx = { git = "https://github.com/ravituringworks/sqlx-no-rsa.git", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "uuid"] }
tokio-util = "0.7"
md5 = "0.7"
tempfile = "3.0"
tonic = "0.12"
prost = "0.13"
futures.workspace = true
tower = { version = "0.4", features = ["limit", "load-shed", "timeout"] }
hyper = "0.14"
fastrand = "2.0"
metrics = "0.23"
# LSP dependencies
tower-lsp = "0.20"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
tracing-subscriber = "0.3"
# Spatial dependencies
dashmap.workspace = true
rayon = "1.10"
bytes = "1.0"
# Security dependencies
regex = "1.10"

[[bin]]
name = "orbitql-lsp"
path = "src/bin/orbitql-lsp.rs"

[[bin]]
name = "orbitql-lsp-simple"
path = "src/bin/orbitql-lsp-simple.rs"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
