[package]
name = "orbit-util"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Orbit utilities and base functionality"

[lib]
path = "src/lib.rs"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rand = "0.9"
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait = "0.1"
dashmap.workspace = true
