[package]
name = "persistence-benchmark"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.0"
rand = "0.8"
async-trait = "0.1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# RocksDB baseline
rocksdb = "0.21"

# Memory mapping
memmap2 = "0.9"

# Async utilities
futures = "0.3"
tokio-util = "0.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Testing utilities
tempfile = "3.0"
fastrand = "2.0"

# Statistics
statistical = "1.0"

[[bench]]
name = "persistence_comparison"
harness = false

[[example]]
name = "cow_btree_demo"
path = "examples/cow_btree_demo.rs"

[[example]]
name = "cow_btree_persistence_demo"
path = "examples/cow_btree_persistence_demo.rs"

[[example]]
name = "rocksdb_demo"
path = "examples/rocksdb_demo.rs"

[[example]]
name = "configurable_backends_demo"
path = "examples/configurable_backends_demo.rs"
