[package]
name = "orbit-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
orbit-client = { path = "../orbit-client" }
orbit-server = { path = "../orbit-server" }
orbit-shared = { path = "../orbit-shared" }
orbit-proto = { path = "../orbit-proto" }
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
cucumber = "0.20"

[[test]]
name = "integration"
harness = false

[[test]]
name = "bdd"
harness = false